Update:投稿記事の機能追加
投稿機能の追加、削除、自分の投稿したものにだけ削除ボタンが出る機能を追加しました。

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block customcss %}
+<link href="{% static 'login.css' %}" rel="stylesheet">
+{% endblock customcss %}
+
 {% block content %}
 <body class="text-center">
     {{ context  }}
