--- a/templates/list.html
+++ b/templates/list.html
@@ -14,5 +14,30 @@
 {% endblock header %}
 
 {% block content %}
-    
+<div class="container">
+    {% for item in object_list %}
+    <!-- 記事全体をリンクにしている -->
+    <a href="{% url 'detail' item.pk %}">
+
+        <div class="alert alert-secondary" role="alert">
+            <p>{{ item.content }}</p>
+            投稿者：<p>{{ item.user_id }}</p>
+            {% if item.user_id == login_user %}
+            <p><a href="{% url 'delete' item.pk %}" class="btn btn-danger" tabindex="-1" role="button"
+                    aria-disabled="true">削除</a></p>
+            {% endif %}
+        </div>
+    </a>
+    {% endfor %}
+</div>
+<!-- create -->
+<a href="{% url 'create' %}" class="bi bi-file-earmark-text">
+    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-earmark-plus"
+        viewBox="0 0 16 16">
+        <path
+            d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z" />
+        <path
+            d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z" />
+    </svg>
+</a>
 {% endblock content %}
