--- a/templates/signup.html
+++ b/templates/signup.html
@@ -38,7 +38,7 @@
             </div>
             <!-- profile_image -->
             <div class="form-floating">
-                <input type="file" class="form-control form-control-sm" id="profile_image" name="profile_image" >
+                <input type="file" class="form-control form-control-sm" id="profile_image" name="profile_image" required>
                 <label for="profile_image">プロフィール画像</label>
             </div>
             <!-- email -->
@@ -49,8 +49,10 @@
             
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+            <a href="{% url 'login' %}" class="btn btn-link">ログイン画面へ</a>
+
         </form>
+        {{ error }}
     </main>
-    {{ error }}
 </body>
 {% endblock content %}
