--- a/templates/likelist.html
+++ b/templates/likelist.html
@@ -11,12 +11,14 @@
 
     <a href="{% url 'logout' %}" class="btn btn-link">ログアウト</a>
     <a href="{% url 'likelist' %}" class="btn btn-link">いいねリスト</a>
+
 </div>
 {% endblock header %}
 
 {% block content %}
 <div class="container">
     {% for item in object_list %}
+    {% if login_user in item.like.all %}
     <!-- 記事全体をリンクにしている -->
     <a href="{% url 'detail' item.pk %}">
         <div class="alert alert-secondary" role="alert">
@@ -49,18 +51,9 @@
                 {{ item.like.count }}
             </p>
             {% endif %}
+            {% endif %}
         </div>
     </a>
     {% endfor %}
 </div>
-<!-- create -->
-<a href="{% url 'create' %}" class="bi bi-file-earmark-text">
-    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-earmark-plus"
-        viewBox="0 0 16 16">
-        <path
-            d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z" />
-        <path
-            d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z" />
-    </svg>
-</a>
 {% endblock content %}
