--- a/templates/create.html
+++ b/templates/create.html
@@ -6,14 +6,25 @@
 {% endblock customcss %}
 
 {% block header %}
-<div class="alert alert-light" role="alert">
-    <h3>Posting App</h3>
+<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <a href="{% url 'list' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      <span class="fs-4">bezibezitter</span>
+    </a>
 
-    <a href="{% url 'logout' %}" class="btn btn-link">ログアウト</a>
-</div>
+    <ul class="nav nav-pills">
+      <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+      <li class="nav-item"><a href="{% url 'followlist' %}" class="nav-link">フォローしたユーザーの投稿</a></li>
+      <li class="nav-item"><a href="{% url 'likelist' %}" class="nav-link">いいねリスト</a></li>
+      <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">ログアウト</a></li>
+      <li class="nav-item"><a href="{% url 'account' %}"><img src="{{ login_user.profile_image.url }}" alt="" height="50" width="50"></a></li>
+    </ul>
+  </header>
 {% endblock header %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <div class="container">
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -34,5 +45,7 @@
         <input type="submit" class="btn btn-primary" value="create">
     </form>
 </div>
-
+{% else %}
+please login
+{% endif %}
 {% endblock content %}
