--- a/templates/list.html
+++ b/templates/list.html
@@ -6,12 +6,22 @@
 {% endblock customcss %}
 
 {% block header %}
-<div class="alert alert-light" role="alert">
-    <h3>SNS</h3>
+<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <a href="{% url 'list' %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      <span class="fs-4">bezibezitter</span>
+    </a>
 
-    <a href="{% url 'logout' %}" class="btn btn-link">ログアウト</a>
-    <a href="{% url 'likelist' %}" class="btn btn-link">いいねリスト</a>
-</div>
+    <ul class="nav nav-pills">
+      <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+      <li class="nav-item"><a href="{% url 'followlist' %}" class="nav-link">フォローしたユーザーの投稿</a></li>
+      <li class="nav-item"><a href="{% url 'likelist' %}" class="nav-link">いいねリスト</a></li>
+      <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">ログアウト</a></li>
+      <li class="nav-item"><a href="{% url 'account' %}"><img src="{{ login_user.profile_image.url }}" alt="" height="50" width="50"></a></li>
+
+    </ul>
+  </header>
 {% endblock header %}
 
 {% block content %}
@@ -20,8 +30,15 @@
     <!-- 記事全体をリンクにしている -->
     <a href="{% url 'detail' item.pk %}">
         <div class="alert alert-secondary" role="alert">
-            <p>{{ item.content }}</p>
             投稿者：<p>{{ item.user_id }}</p>
+
+            {% if item.user_id in connection.0.following.all %}
+            <a href="{% url 'follow_home' item.pk %}" class="btn btn-danger ms-3" tabindex="-1" role="button" aria-disabled="true">フォロー解除</a>
+            {% else %}
+            <a href="{% url 'follow_home' item.pk %}" class="btn btn-primary ms-3" tabindex="-1" role="button" aria-disabled="true">フォロー</a>
+            {% endif %}
+
+            <p>{{ item.content }}</p>
             {% if item.user_id == login_user %}
             <p><a href="{% url 'delete' item.pk %}" class="btn btn-danger" tabindex="-1" role="button"
                     aria-disabled="true">削除</a></p>
