--- a/templates/detail.html
+++ b/templates/detail.html
@@ -18,7 +18,8 @@
       <li class="nav-item"><a href="{% url 'followlist' %}" class="nav-link">フォローしたユーザーの投稿</a></li>
       <li class="nav-item"><a href="{% url 'likelist' %}" class="nav-link">いいねリスト</a></li>
       <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">ログアウト</a></li>
-      <li class="nav-item"><a href="{% url 'account' %}"><img src="{{ login_user.profile_image.url }}" alt="" height="50" width="50"></a></li>
+      <li class="nav-item"><a href="{% url 'account' request.user %}"><img src="{{ request.user.profile_image.url }}" alt="" height="50" width="50"></a></li>
+
     </ul>
   </header>
 {% endblock header %}
