--- a/templates/list.html
+++ b/templates/list.html
@@ -18,7 +18,7 @@
       <li class="nav-item"><a href="{% url 'followlist' %}" class="nav-link">フォローしたユーザーの投稿</a></li>
       <li class="nav-item"><a href="{% url 'likelist' %}" class="nav-link">いいねリスト</a></li>
       <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">ログアウト</a></li>
-      <li class="nav-item"><a href="{% url 'account' %}"><img src="{{ request.user.profile_image.url }}" alt="" height="50" width="50"></a></li>
+      <li class="nav-item"><a href="{% url 'account' request.user %}"><img src="{{ request.user.profile_image.url }}" alt="" height="50" width="50"></a></li>
 
     </ul>
   </header>
@@ -30,8 +30,7 @@
     <!-- 記事全体をリンクにしている -->
     <a href="{% url 'detail' item.pk %}">
         <div class="alert alert-secondary" role="alert">
-            <img src="{{ item.profile_image.url }}" alt="">
-            投稿者：<p>{{ item.user_id }}</p>
+            <p><a href="{% url 'account' item.user_id%}">投稿者：{{ item.user_id }}</a></p>
 
             {% if item.user_id in connection.0.following.all %}
             <a href="{% url 'follow_home' item.pk %}" class="btn btn-danger ms-3" tabindex="-1" role="button" aria-disabled="true">フォロー解除</a>
