Update:ログインとサインアップ見た目の改善

--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,7 @@
             
             <button class="w-100 btn btn-lg btn-primary" type="submit">login</button>
         </form>
+        <p>アカウントをお持ちですか？</p><a href="{% url 'signup' %}" class="link-primary">アカウント作成</a>
     </main>
     {{ message }}
 </body>
