Update:削除機能の修正
削除機能が動かなかったので修正しました。

戻るボタンやデザインも反映されていなかったので修正しました。

--- a/static/account.css
+++ b/static/account.css
@@ -10,6 +10,11 @@
     z-index: 999;
 }
 
+.icon{
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
 .container{
     padding-top: 120px;
     display: flex;
