--- a/static/list.css
+++ b/static/list.css
@@ -8,6 +8,10 @@
     background-color: rgb(224, 222, 222);
     z-index: 999;
 }
+.icon{
+    border-radius: 50%;
+    margin-right: 5px;
+}
 .container{
     padding-top: 90px;
 
