--- a/templates/create.html
+++ b/templates/create.html
@@ -20,7 +20,7 @@
       <li class="nav-item"><a href="{% url 'likelist' %}" class="nav-link">いいねリスト</a></li>
       <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">ログアウト</a></li>
       <li class="nav-item"><a href="{% url 'account' request.user %}"><img src="{{ request.user.profile_image.url }}"
-                  alt="" height="50" width="50"></a></li>
+                  alt="" height="50" width="50" class="icon"></a></li>
 
   </ul>
 </header>
@@ -45,7 +45,8 @@
     
     
     <input type="hidden" name="user_id" value="{{ user.user_id }}">
-    <input type="submit" class="btn btn-primary" value="create">
+    <input type="submit" class="btn btn-primary" value="作成">
+    <input type="button" class="btn btn-secondary" value="戻る" onClick="javascript:history.go(-1);">
   </form>
 </div>
 {% else %}
