--- a/static/list.css
+++ b/static/list.css
@@ -66,6 +66,10 @@
 .create_user:hover {
     color: rgb(112, 110, 110);
 }
+#datetime{
+    color: rgb(175, 172, 172);
+    margin-left: 10%;
+}
 #content{
     position: relative;
     top: 20px;
